main.css
body {
        background-color: #FFFBF0;
        color: #800000;
        min-height: 100vh;
        display: flex;
        flex-direction: column;
}
a {
	background-color: transparent;
	color: #808000;
}
a:visited {
	background-color: transparent;
	color: #808000;
}
a:hover {
	background-color: transparent;
	color: #FF0000;
}
h1 {
	font-family: tahoma, arial, helvetica, sans-serif;
	text-align: center;
	color: #800000;
	background-color: transparent;
}
div.index {
	text-align: center;
}
div.index table {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}
div.navigation {
	text-align: center;
}
div.navigation table {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}
div.photograph {
	text-align: center;
}
div.photograph table {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}
td.thumbcell {
	width: 100px;
}
div.title {
	font-weight: bold;
	font-family: tahoma, arial, helvetica, sans-serif;
	text-align: right;
	font-size: 0.8em;
	color: #800000;
	background-color: transparent;
}
.caption {
	font-family: tahoma, arial, helvetica, sans-serif;
	text-align: center;
	font-size: 0.8em;
	color: #800000;
	background-color: transparent;
}
.footnote {
        font-size: 0.6em;
        text-align: center;
        font-family: tahoma, arial, helvetica, sans-serif;
        margin-top: 1em;
}
.textleft {
	text-align: left;
	font-family: tahoma, arial, helvetica, sans-serif;
	font-size: 0.8em;
	color: #800000;
	background-color: transparent;
}
.textright {
	text-align: right;
	font-family: tahoma, arial, helvetica, sans-serif;
	font-size: 0.8em;
	color: #800000;
	background-color: transparent;
}
.textcenter {
        text-align: center;
        font-family: tahoma, arial, helvetica, sans-serif;
        font-size: 0.8em;
        color: #800000;
        background-color: transparent;
}

.bookmarkPage {
        min-height: 100vh;
}

.bookmarkHr {
        margin: 1em 0;
        border: none;
        border-top: 1px solid #800000;
}

.edit-link {
        font-size: small;
        margin-left: 0.3em;
        text-decoration: none;
}

body:not(.edit-mode) .edit-link {
        display: none;
}

.edit-form textarea {
        width: 90vw;
        height: 80vh;
        font-family: monospace;
}

.category-form textarea {
        height: 30vh;
}


.cssColumns .bookmarkColumns {
        display: flex;
        flex-wrap: wrap;
        align-items: flex-start;
}

.cssColumns .bookmarkColumn {
        padding-right: 1em;
        display: flex;
        flex-direction: column;
}

.cssColumns .bookmarkColumn:last-child {
        margin-right: 0;
}

.cssColumns .categoryBlock {
        break-inside: avoid;
        page-break-inside: avoid;
        -webkit-column-break-inside: avoid;
}

/* Keep navigation bar fixed on the left */
#nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 200px;
    height: 100vh;
    overflow-y: auto;
}

/* Offset main content to the right of the fixed nav */
#layout {
    margin-left: 200px;
}

#bottom {
    flex-grow: 1;
}

.bookmarkPage table td {
    padding-right: 1em;
}

.move-handle {
    cursor: move;
    margin-right: 0.3em;
}

.categoryBlock.drag-over {
    outline: 2px dotted #800000;
}

#tab-list li.drag-over,
#page-list li.drag-over {
    outline: 2px dotted #800000;
}

.newColumnDropZone,
.columnEndDropZone {
    display: inline-block;
    border: 2px dotted #800000;
}

.newColumnDropZone {
    width: 1em;
    min-height: 50vh;
    margin-left: 0.5em;
}

.columnEndDropZone {
    width: 100%;
    min-height: 150px;
    margin-left: 0;
    margin-top: 0.5em;
}

.add-category-link {
    display: block;
    text-align: center;
    font-size: small;
    text-decoration: none;
}

body:not(.edit-mode) .add-category-link {
    display: none;
}

body:not(.edit-mode) .newColumnDropZone,
body:not(.edit-mode) .columnEndDropZone {
    display: none;
}

.moveIcon {
    cursor: move;
    margin-right: 0.2em;
}

.categoryBlock h2 {
    cursor: move;
}

body:not(.edit-mode) .categoryBlock h2 {
    cursor: default;
}

body:not(.edit-mode) .moveIcon {
    display: none;
}

body:not(.edit-mode) .move-handle {
    display: none;
}

/* Search box styles */
#search-box {
    width: 90%;
    margin-top: 0.5em;
}
.search-hidden {
    display: none;
}
.search-selected {
    background-color: #ffe0e0;
}

input.search-widget {
    width: 80%;
    margin-left: 0.2em;
}

/* Style for the active tab */
#tab-list li.active-tab a {
    font-weight: bold;
}

/* Tab visibility */
.tab-panel {
    display: none;
}

.tab-panel.active-tab-panel {
    display: block;
}

.tab-panel.tab-hidden {
    display: none;
}

#tab-content.search-mode .tab-panel {
    display: block;
}

/* Style for the active page */
#page-list li.active-page a {
    font-weight: bold;
}

